# fastapi-app2

./: fly.toml  main.py  pyproject.toml
.github/workflows/: fly.yml
